- Improve Invitation code Add-on to accept an code via URL param &invitation_code=abc
- Improved the details in the Pro-Rating Add-on with short instructions
- Improve Membership Description to allow shortcodes
- Fix the user-name variables in email/shortcodes (use display name instead of login name)
- Fix the "Ignore" action in the Transaction log list
- Fix protection bug that would hide custom posts in certain situations
- Fix a bug in Pro-Rating Add-on to correctly apply discount from now on
- Fix wrong signup-logic to instantly disable the old subscription on membership upgrade/downgrade
- Fix a PHP error that occured when paying the first invoice of a member via manual gateway
- Fix displayed payment method for subscriptions in Member editor screen
- Fix an issue that would not actiavte imported subscriptions
- Small changes like fix some typos, add new filters and code cleanup

1.0.1.1
----------------------------------------------------------------------
- Add a new Automated Email Response: User account created (i.e. welcome email)
- Add a warning when BuddyPress pages conflict with M2 Membership pages
- Add a warning when M2 is installed in an deprecated directory (can cause conflicts)
- Fix detection of valid subscriptions to fix issues with subscriptions getting expired too early
- Fix the BuddyPress registration form/workflow
- Fix the Profile Fields Add-on, now settings are actually saved
- Fix Invitation Code Add-on to not automatically change existing codes upon saving
- Fix bug that prevented deleting invoices
- Fix a bug that would temporarily grant access to a membership when user cancels payment
- Fix a bug that created duplicate email templates every time an email was sent
- Fix a bug in the reset-script that would delete too much data in multisite installs (see Help > Advanced Settings)
- Fix a wrong action hook used in registration form that would display wrong fields when certain plugins are activated